update indent an split paraghraph by '. '

--- a/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
+++ b/0 Network and TCP-IP overview/Chapter_0 Introduction.tex
@@ -86,7 +86,7 @@
         \item Learn how to network device work
         \item Learn how to simulate network
         \item Learn new network protocol (SNMP, \dots)
-        \item IPv4, IPv6, Routing, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, ...         
+        \item IPv4, IPv6, Routing, ARP, RIP, OSPF, UDP, TCP, Multicast, NAT, HTTP, DHCP, SNMP, Security, ...
     \end{itemize}
     \begin{alertblock}{Alert}
         During the study you need to read extra book and documents for do your lab (has not been taught in the Network lesson)
@@ -101,12 +101,15 @@
     \begin{itemize}
         \item Computer Net Lab is a one unit course and it is a follow up of the Computer Networks course.
         \item The materials you have learned in the computer network course is necessary but not sufficient to do Computer Net Lab.
-              You will learn at least 40\% of networking materials that you didn't see in the main course (such as IPV6, Spanning Tree, Multicast, MPLS) . It is necessary to learn the necessary background before attending each session.
+              You will learn at least 40\% of networking materials that you didn't see in the main course (such as IPV6, Spanning Tree, Multicast, MPLS) .
+              It is necessary to learn the necessary background before attending each session.
         \item The grading of this course is divided to 3 main parts.
         \begin{enumerate}
-            \item Reading the background material of each lab before attending each session. There is a quiz in the beginning of each lab of the main materials of the current session.
+            \item Reading the background material of each lab before attending each session.
+                    There is a quiz in the beginning of each lab of the main materials of the current session.
             \item Carrying out the lab within the time slot that assigned for each lab and prepare the report
-            \item A final exam. In the current semester due to COVID 19, we may ask students to voluntarily prepare and fulfil an extra lab instead of exam.
+            \item A final exam.
+                    In the current semester due to COVID 19, we may ask students to voluntarily prepare and fulfil an extra lab instead of exam.
         \end{enumerate}
     \end{itemize}
 
