--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -7,7 +7,8 @@
 
 \begin{document}
 \part{HTTP Exercises}
-    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.101. Add first host from \textit{http-server} and another hsot from \textit{gui}.
+    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e.\  from 128.238.66.100 to 128.238.66.101.
+    Add first host from \textit{http-server} and another hsot from \textit{gui}.
 
 \section{HTTP Server}
     Examine the various configuration directives used and the corresponding settings\footnote{\path{/etc/apache2/apache2.conf}}.
@@ -21,15 +22,16 @@
     \begin{report}
     \item How many \lstinline{apache2} processes were started?
     Which one was the master server, and which ones were the child servers? (\textit{use \lstinline{htop} and switch to \textbf{tree} to see process hierarchy})
-    Justify your answer using the \textbf{apache2} configurations file. Explain your answer with value of \textit{Startservers, MinSpareServers, MaxSpareServers, MaxRequestWorkers, ServerLimit, MaxconnectionsPerChild}
+    Justify your answer using the \textbf{apache2} configurations file.
+    Explain your answer with value of \textit{Startservers, MinSpareServers, MaxSpareServers, MaxRequestWorkers, ServerLimit, MaxconnectionsPerChild}
     
     \item What is the purpose of initiating multiple apache2 processes?
     \end{report}
 
 \section{HTTP Request}
-    Execute \lstinline{wireshark} to capture packets between your host and a remote host. 
+    Execute \lstinline{wireshark} to capture packets between your host and a remote host.
 
-    Login to the remote host’s web server: \lstinline[emph={your-host, remote-host}]{telnet remote-host 80}. 
+    Login to the remote host’s web server: \lstinline[emph={your-host, remote-host}]{telnet remote-host 80}.
 
     In the login console, type the following HTTP request line by line:
     \begin{lstlisting}[language={HTTP},escapechar={},emph={your-host, remote-host}]
@@ -39,10 +41,10 @@ User-Agent: HTTPTool/1.0
 
     \end{lstlisting}
     Note that you need to press the \textit{Return} key to input the last line, which is blank.
-    When the \lstinline{telnet} process is terminated, save the output for your lab report. 
+    When the \lstinline{telnet} process is terminated, save the output for your lab report.
 
     Terminate \lstinline{wireshark} and analyze the captured HTTP packets.
-    Print and save the HTTP request and response. 
+    Print and save the HTTP request and response.
 
     Save the HTTP response’s data part into a file, named \path{index.html}.
     Use \textit{Mozilla} to view the file.
@@ -53,9 +55,10 @@ User-Agent: HTTPTool/1.0
 
     
 \section{HTTP \texttt{Keep-Alive}}
-    By default, Apache server supports persistent connections. Before this exercise, the lab instructor should check the \texttt{KeepAlive} directive in the server configuration file \footnote{\path{/etc/apache2/apache2.conf}} to make sure it is turned on, as \lstinline[language={HTTP}]{KeepAlive On}. 
+    By default, Apache server supports persistent connections.
+    Before this exercise, the lab instructor should check the \texttt{KeepAlive} directive in the server configuration file \footnote{\path{/etc/apache2/apache2.conf}} to make sure it is turned on, as \lstinline[language={HTTP}]{KeepAlive On}.
 
-    Execute \lstinline[emph={your-host, remote-host}]{tcpdump host your-host and remote-host} or run \lstinline{wireshark} to capture packets between your host and a remote host. 
+    Execute \lstinline[emph={your-host, remote-host}]{tcpdump host your-host and remote-host} or run \lstinline{wireshark} to capture packets between your host and a remote host.
 
     
     Enter the URL \url{http://remote-host/try1.html}, to download the HTML file consisting a line of text, an embedded picture, and a hyperlink.
@@ -66,7 +69,8 @@ User-Agent: HTTPTool/1.0
     
     Use \lstinline[emph={your-host, remote-host}]{tcpdump host your-host and remote-host} or run \lstinline{wireshark} and print the HTTP requests and responses for the lab report.
     
-    Use \textit{Mozilla} to reload the \url{try1.html} file. Use \textit{Ctrl+F5} to ignore cache.
+    Use \textit{Mozilla} to reload the \url{try1.html} file.
+    Use \textit{Ctrl+F5} to ignore cache.
 
     Use \lstinline{wireshark} and print the HTTP requests and responses for the lab report.
 
@@ -81,13 +85,13 @@ User-Agent: HTTPTool/1.0
     \end{report}
 
 \section{HTTP Submit}
-    Execute \lstinline{wireshark} to capture packets between your host and a remote host. 
+    Execute \lstinline{wireshark} to capture packets between your host and a remote host.
 
-    Use \textit{Mozilla} to download the \url{http://remote-host/try2.htm} file, which is an \textit{HTML} form, from the remote host. 
+    Use \textit{Mozilla} to download the \url{http://remote-host/try2.htm} file, which is an \textit{HTML} form, from the remote host.
 
-    Fill a text string, e.g.\ the name of the host being used, into the text field in the form and click the submit button in the form. 
+    Fill a text string, e.g.\ the name of the host being used, into the text field in the form and click the submit button in the form.
 
-    When the server response is received, terminate \lstinline{wireshark}. 
+    When the server response is received, terminate \lstinline{wireshark}.
 
     Examine how LAMP (for php)\footnote{or CGI (for perl)} works, and identify the data string sent to the server.
     Save the HTTP request containing the data string for lab report.
@@ -132,7 +136,8 @@ User-Agent: HTTPTool/1.0
     \end{center}
 
 \section{DHCP Server}
-    In this exercise, we use \textit{h1} as the DHCP server, with a configuration file\footnote{\path{/etc/dhcp/dhcpd.conf}} shown in \hyperref[tab:8.3]{Table~8.3}. Do the following:
+    In this exercise, we use \textit{h1} as the DHCP server, with a configuration file\footnote{\path{/etc/dhcp/dhcpd.conf}} shown in \hyperref[tab:8.3]{Table~8.3}.
+    Do the following:
 
     \begin{enumerate}
         \item Change MAC address of \textit{h5} in server configuration file (\hyperref[tab:8.3]{Table~8.3}) by your \textit{h5} MAC address and save to \textit{dhcpd.conf}.
@@ -143,7 +148,7 @@ User-Agent: HTTPTool/1.0
         
         \item Execute \lstinline{tcpdump -exn -nn -s 100} or \lstinline{wireshark} to capture the DHCP messages in the network segment.
         
-        \item Then do the following to enable DHCP for the Ethernet interface on \textit{h2}. 
+        \item Then do the following to enable DHCP for the Ethernet interface on \textit{h2}.
 
         Run \lstinline{ifconfig eth0 0} on \lstinline{h2} to clear IP of \textit{eth0}
 
@@ -161,7 +166,8 @@ User-Agent: HTTPTool/1.0
         \item Repeat 5 for \textit{h5}.
     \end{enumerate}
 
-    Terminate \lstinline{wireshark}. Print out the DHCP messages for the lab report. 
+    Terminate \lstinline{wireshark}.
+    Print out the DHCP messages for the lab report.
 
     Save the DHCP server output on \textit{h1} for the lab report.
 
@@ -226,7 +232,8 @@ host h5 {
     \end{center}
 
 \section{NTP Local Date}
-    Execute \lstinline{date} to display the system time of your host. Display the manual page of \lstinline{date}, and study its options and usages.
+    Execute \lstinline{date} to display the system time of your host.
+    Display the manual page of \lstinline{date}, and study its options and usages.
     Try the following \lstinline{date} commands: 
 
     \begin{lstlisting}[emph={file-name}]
@@ -274,20 +281,25 @@ date -r file-name
     \end{report}
 
 \section{** NTP Server}
-    Keep the NTP server running on \textit{h0}. Execute \lstinline[emph={your-host, remote-host}]{tcpdump -exn -nn host your-host and 128.238.66.100} or \lstinline{wireshark} to capture the NTP messages between \textit{your-host} and \textit{h0}.
+    Keep the NTP server running on \textit{h0}.
+    Execute \lstinline[emph={your-host, remote-host}]{tcpdump -exn -nn host your-host and 128.238.66.100} or \lstinline{wireshark} to capture the NTP messages between \textit{your-host} and \textit{h0}.
 
     Config \path{/etc/ntp.conf} in \textit{other-host} and add \lstinline[language={conf}]{server 128.238.66.100} to config file.
 
     Start the NTP clients on your host, by \lstinline{service ntp start}.
 
-    Wait for several minutes. Then terminate the \lstinline{tcpdump} program. Analyze the captured NTP packets. Print one of the NTP packets for the lab report.
+    Wait for several minutes.
+    Then terminate the \lstinline{tcpdump} program.
+    Analyze the captured NTP packets.
+    Print one of the NTP packets for the lab report.
 
     Execute \lstinline{ntpq -p} to get \lstinline{ntp} server list.
 
     Execute \lstinline{ntptrace} to show the client/server relation of NTP.
 
     \begin{report}
-    \item Submit the NTP packet captured. List the fields and their values.
+    \item Submit the NTP packet captured.
+    List the fields and their values.
     
     \item What was the rate at which NTP queries were sent by the client?
     
@@ -295,7 +307,11 @@ date -r file-name
     \end{report}
 
 \part{NAT Exercises}
-    For the exercises in this section, we use a network setting as shown in \hyperref[fig:8.7]{Figure~8.7}. The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix. The upper subnet represents the Internet. The hosts, i.e.\  \textit{h0} and \textit{h1} are assigned with public IP addresses. Router 1 is used as the stub router, which performs address or port translation for the private network.
+    For the exercises in this section, we use a network setting as shown in \hyperref[fig:8.7]{Figure~8.7}.
+    The lower subnet is a private network where the hosts are assigned with the Class A addresses with the 10.0.0.0/8 prefix.
+    The upper subnet represents the Internet.
+    The hosts, i.e.\  \textit{h0} and \textit{h1} are assigned with public IP addresses.
+    Router 1 is used as the stub router, which performs address or port translation for the private network.
     \begin{figure}[H]
         \centering
         \begin{tikzpicture}
@@ -347,9 +363,11 @@ date -r file-name
     \end{figure}
 
 \section{NAT}
-    Connect the hosts and Router 1 as shown in \hyperref[fig:8.7]{Figure~8.7}. Then set the IP address and the network mask of your host as shown in the figure.
+    Connect the hosts and Router 1 as shown in \hyperref[fig:8.7]{Figure~8.7}.
+    Then set the IP address and the network mask of your host as shown in the figure.
     In addition, you need to add a default route in your host’s routing table, using the router interface on your subnet as the default router.
-    One student should \lstinline{telnet} to the router and configure the router as shown in \hyperref[tab:8.5]{Table~8.5}. Note that there is a static translation that maps 10.0.0.7, or \textit{h7}, to 128.238.61.104.
+    One student should \lstinline{telnet} to the router and configure the router as shown in \hyperref[tab:8.5]{Table~8.5}.
+    Note that there is a static translation that maps 10.0.0.7, or \textit{h7}, to 128.238.61.104.
     Login to the router, execute \lstinline{write term} to display the current router configuration.
     Execute \lstinline{show ip nat translations} in the \textit{Privileged EXEC} mode to display the translation table.
     Save both outputs for the lab report.
@@ -379,13 +397,18 @@ config term
     \end{lstlisting}
 
 \section{NAT Visibility}
-    Keep the login session to the router running. Execute \lstinline{tcpdump -exn -nn} or \lstinline{wireshark} on two side of the router.
+    Keep the login session to the router running.
+    Execute \lstinline{tcpdump -exn -nn} or \lstinline{wireshark} on two side of the router.
 
-    Before any host in the private network send any packets out, \lstinline{ping} an inside host (e.g.\ \textit{h5}) from an outside host (e.g.\ \textit{h1}). You may try to \lstinline{ping} \textit{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}. Can you \lstinline{ping} these IP addresses? 
+    Before any host in the private network send any packets out, \lstinline{ping} an inside host (e.g.\ \textit{h5}) from an outside host (e.g.\ \textit{h1}).
+    You may try to \lstinline{ping} \textit{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}.
+    Can you \lstinline{ping} these IP addresses? 
 
-    Let an inside host send packets to an outside host, e.g.\ from \textit{h5}, execute \lstinline{ping} 128.238.61.100. Can you \lstinline{ping} \textit{h5} from an outside host now? Why? Which IP address should be used in the \lstinline{ping} command in order to \lstinline{ping} \textit{h5}? 
+    Let an inside host send packets to an outside host, e.g.\ from \textit{h5}, execute \lstinline{ping} 128.238.61.100.
+    Can you \lstinline{ping} \textit{h5} from an outside host now? Why? Which IP address should be used in the \lstinline{ping} command in order to \lstinline{ping} \textit{h5}? 
 
-    Execute \lstinline[language=cisco]{show ip nat translations} in the router login window to display the translation table. Save the output for the lab report. 
+    Execute \lstinline[language=cisco]{show ip nat translations} in the router login window to display the translation table.
+    Save the output for the lab report.
 
     \begin{report}
     \item Answer the above questions.
@@ -398,11 +421,12 @@ config term
     \end{report}
 
 \section{NAT Table}
-    Keep the login session to the router running. Execute \lstinline{tcpdump -enx -s 100 ip proto 1} or \lstinline{wireshark} to capture ICMP messages on two subnet.
+    Keep the login session to the router running.
+    Execute \lstinline{tcpdump -enx -s 100 ip proto 1} or \lstinline{wireshark} to capture ICMP messages on two subnet.
 
-    Execute \lstinline{socket -i -u -n1 128.238.61.101 8888} on \textit{h2} to generate an ICMP port unreachable error. 
+    Execute \lstinline{socket -i -u -n1 128.238.61.101 8888} on \textit{h2} to generate an ICMP port unreachable error.
 
-    Print the ICMP error message for the lab report. 
+    Print the ICMP error message for the lab report.
 
     Execute \lstinline[language=cisco]{show ip nat translations} in the router login window to display the translation table.
     Save the output for the lab report.
@@ -414,14 +438,18 @@ config term
 
 \section{NAT and PAT}
     Reboot the router to restore its default configuration.
-    Then, configure the router to use PAT, as given in \hyperref[tab:8.6]{Table~8.6}. Now all the hosts in the private network use the same IP address 128.238.61.1. However, note that there is a static translation that maps \textit{h7}’s port 80 to 128.238.61.1 port 80.
+    Then, configure the router to use PAT, as given in \hyperref[tab:8.6]{Table~8.6}.
+    Now all the hosts in the private network use the same IP address 128.238.61.1.
+    However, note that there is a static translation that maps \textit{h7}’s port 80 to 128.238.61.1 port 80.
 
     Execute \lstinline{tcpdump} on two subnet.
 
     Generate traffic between the inside and outside hosts.
     Examine the \lstinline{tcpdump} output to see how PAT works.
 
-    Start the Apache web server on \textit{h7}. Also, run \lstinline[language=bash-ext]{curl} on an outside host (e.g.\ \textit{h0}), and with the URL \url{http://128.238.61.1}. Save the \lstinline{tcpdump} output.
+    Start the Apache web server on \textit{h7}.
+    Also, run \lstinline[language=bash-ext]{curl} on an outside host (e.g.\ \textit{h0}), and with the URL \url{http://128.238.61.1}.
+    Save the \lstinline{tcpdump} output.
 
     Use \lstinline[language={cisco}]{show ip nat translations} to display and then save the translation table.
 
@@ -457,9 +485,10 @@ config term
 \part{Socket Programming Exercises}
 \section{Socket Programming}
     Examine the UDP socket programs \path{/home/netlab/code/UDPserver.c} and \path{/home/netlab/code/UDPclient.c} to learn how to write a UDP socket program.
-    You can compile the C programs by using \lstinline{gcc -o UDPserver UDPserver.c -lnsl} and \lstinline{gcc -o UDPclient UDPclient.c -lnsl}. Compile output available at \path{/usr/local/bin/} directory.
+    You can compile the C programs by using \lstinline{gcc -o UDPserver UDPserver.c -lnsl} and \lstinline{gcc -o UDPclient UDPclient.c -lnsl}.
+    Compile output available at \path{/usr/local/bin/} directory.
 
-    Start \lstinline[emph={your-host, remote-host}]{tcpdump host remote-host} or \lstinline{wireshark} to capture packets from or to a remote host. 
+    Start \lstinline[emph={your-host, remote-host}]{tcpdump host remote-host} or \lstinline{wireshark} to capture packets from or to a remote host.
 
     On the remote host, start the UDP server by \lstinline[emph={server-port}]{./UDPserver server-port}.
     Then, start the UDP client on your host by \lstinline[emph={your-host, remote-host, server-port, a-message}]{./UDPclient remote-host server-port a-message}.
@@ -480,10 +509,13 @@ config term
     % \end{report}
 
 \section{FTP Socket Programming}
-    This is an optional exercise on socket programming. Or, it can be assigned as a take-home project for extra credits. Note that familiarity with C (or C++) programming is required.
+    This is an optional exercise on socket programming.
+    Or, it can be assigned as a take-home project for extra credits.
+    Note that familiarity with C (or C++) programming is required.
 
     \subsection*{Problem}
-    Examine the message exchanges of FTP. Write a FTP client program which takes a file name as input, and upload the file to a standard FTP server on a remote machine.
+    Examine the message exchanges of FTP.
+    Write a FTP client program which takes a file name as input, and upload the file to a standard FTP server on a remote machine.
 
     \subsection*{Hints}
     \begin{itemize}
